Do not allow exits during APT cache reloads.

This fixes a bug where the pending-changes check in the exit query would crash if the user
attempted to exit during a cache reload. (E.g. after a sources refresh)

BUG:279345
FIXED-IN:1.2.0